[IMP] improve packaging spec, update README.md

--- a/misc/inpack/inpack.toml
+++ b/misc/inpack/inpack.toml
@@ -1,11 +1,15 @@
 [project]
-name = kvgo-server
-version = 0.9.0
-vendor = lynkdb.com
-homepage = https://github.com/lynkdb/kvgo-server
-groups = dev/sys-srv
+name = "kvgo-server"
+version = "0.9.1"
+vendor = "lynkdb.com"
+homepage = "https://github.com/lynkdb/kvgo-server"
+groups = ["dev/sys-srv"]
 
-%build
+[files]
+allow = "misc/"
+
+[scripts]
+build = """
 export PATH=$PATH:/usr/local/go/bin:/opt/gopath/bin
 export GOPATH=/opt/gopath
 
@@ -15,7 +19,7 @@ mkdir -p {{.buildroot}}/misc
 mkdir -p {{.buildroot}}/var/log
 mkdir -p {{.buildroot}}/var/data
 
-go build -ldflags "-X main.version={{.project__version}} -X main.release={{.project__release}}" -o {{.buildroot}}/bin/kvgo-server cmd/server/main.go
+go build -ldflags \"-X main.version={{.project__version}} -X main.release={{.project__release}}\" -o {{.buildroot}}/bin/kvgo-server cmd/server/main.go
 
 rm -rf /tmp/rpmbuild/*
 mkdir -p /tmp/rpmbuild/{BUILD,RPMS,SOURCES,SPECS,SRPMS,BUILDROOT}
@@ -29,15 +33,12 @@ sed -i 's/__release__/{{.project__release}}/g' /tmp/rpmbuild/SOURCES/kvgo-server
 cd /tmp/rpmbuild/SOURCES/
 tar zcf kvgo-server-{{.project__version}}.tar.gz kvgo-server-{{.project__version}}
 
-rpmbuild --define "debug_package %{nil}" -ba /tmp/rpmbuild/SOURCES/kvgo-server-{{.project__version}}/misc/rpm/rpm.spec \
+rpmbuild --define \"debug_package %{nil}\" -ba /tmp/rpmbuild/SOURCES/kvgo-server-{{.project__version}}/misc/rpm/rpm.spec \
   --define='_tmppath /tmp/rpmbuild' \
   --define='_builddir /tmp/rpmbuild/BUILD' \
   --define='_topdir /tmp/rpmbuild' \
   --define='dist .{{.project__dist}}'
 
-find /tmp/rpmbuild/RPMS/ -type f -name *.rpm |xargs  -I '{}' mv {} {{.inpack__pack_dir}} 
+find /tmp/rpmbuild/RPMS/ -type f -name *.rpm |xargs  -I '{}' mv {} {{.inpack__pack_dir}}
 
-%files
-misc/
-
-
+"""
