--- a/misc/inpack/inpack.toml
+++ b/misc/inpack/inpack.toml
@@ -1,6 +1,6 @@
 [project]
 name = "kvgo-server"
-version = "0.9.6"
+version = "0.9.7"
 vendor = "lynkdb.com"
 homepage = "https://github.com/lynkdb/kvgo-server"
 groups = ["dev/sys-srv"]
@@ -19,7 +19,7 @@ mkdir -p {{.buildroot}}/misc
 mkdir -p {{.buildroot}}/var/log
 mkdir -p {{.buildroot}}/var/data
 
-go build -ldflags \"-X main.version={{.project__version}} -X main.release={{.project__release}}\" -o {{.buildroot}}/bin/kvgo-server cmd/server/main.go
+CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags \"-X main.version={{.project__version}} -X main.release={{.project__release}}\" -o {{.buildroot}}/bin/kvgo-server cmd/server/main.go
 
 rm -rf /tmp/rpmbuild/*
 mkdir -p /tmp/rpmbuild/{BUILD,RPMS,SOURCES,SPECS,SRPMS,BUILDROOT}
